fix(fx): store settings under the user home directory